# nfl_picker

./: .gitignore  README.md  app.py  find_unused_files.py  pyproject.toml  render.yaml  run_gui.py  run_web.py
src/nfl_picker/: config.py  crew.py  database.py  enhanced_web_scraper.py  focused_analysis.py  gui_app.py  main.py  run_web_scraping.py  ssl_fix.py  stats_database.py  team_utils.py  update_stats.py  utils.py
src/nfl_picker/config/: agents.yaml  tasks.yaml
src/nfl_picker/data_collectors/: __init__.py  api_collector.py  web_scraper.py
src/nfl_picker/tools/: serper_tool.py  sportsdata_api_script.py
static/: script.js  style.css
templates/: index.html
