[project]
name = "nfl_picker"
version = "0.1.0"
description = "nfl_picker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
nfl_picker = "nfl_picker.main:run"
run_crew = "nfl_picker.main:run"
train = "nfl_picker.main:train"
replay = "nfl_picker.main:replay"
test = "nfl_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
